--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Building  a car sales website with rust",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server.js",
+    "start: prod": "NODE_ENV=production nodemon server.js"
   },
   "author": "Ian Githungo",
   "license": "MIT",
