--- a/package.json
+++ b/package.json
@@ -7,11 +7,21 @@
     "start": "nodemon server.js",
     "start: prod": "NODE_ENV=production nodemon server.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/GithungoIan/exJapanConnection"
+  },
   "author": "Ian Githungo",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/GithungoIan/exJapanConnection/issues"
+  },
+  "homepage": "https://github.com/GithungoIan/exJapanConnection#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "helmet": "^4.1.0",
     "mongoose": "^5.10.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
