--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "pug": "^3.0.0",
     "sharp": "^0.26.1",
     "validator": "^13.1.1"
+  },
+  "devDependencies": {
+    "parcel-bundler": "^1.12.4"
   }
 }
