--- a/package.json
+++ b/package.json
@@ -18,16 +18,27 @@
   },
   "homepage": "https://github.com/GithungoIan/exJapanConnection#readme",
   "dependencies": {
+    "@babel/polyfill": "^7.11.5",
+    "axios": "^0.20.0",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "helmet": "^4.1.0",
-    "mongoose": "^5.10.2",
+    "express-mongo-sanitize": "^2.0.0",
+    "express-rate-limit": "^5.1.3",
+    "helmet": "^4.1.1",
+    "hpp": "^0.2.3",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.7",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "node-sass": "^4.14.1",
+    "nodemailer": "^6.4.13",
     "pug": "^3.0.0",
     "sharp": "^0.26.1",
-    "validator": "^13.1.1"
+    "slugify": "^1.4.5",
+    "validator": "^13.1.17",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.4"
