--- a/config.env
+++ b/config.env
@@ -1,3 +1,13 @@
 NODE_ENV = development
 PORT = 3000
 DATABASE_LOCAL = mongodb://localhost:27017/exJapanConnections
+
+
+JWT_SECRET=my-ultra-secure-and-ultra-long-secret
+JWT_EXPIRES_IN=30d
+JWT_COOKIE_EXPIRES_IN=90
+
+EMAIL_USERNAME=a124458539192a
+EMAIL_PASSWORD=1e3caf48074eba
+EMAIL_HOST=smtp.mailtrap.io
+EMAIL_PORT=25
