--- a/config.env
+++ b/config.env
@@ -3,11 +3,11 @@ PORT = 3000
 DATABASE_LOCAL = mongodb://localhost:27017/exJapanConnections
 
 
-JWT_SECRET=my-ultra-secure-and-ultra-long-secret
-JWT_EXPIRES_IN=30d
+JWT_SECRET=welcome-to-Ians-secret-key-for-jsonwebtoken
+JWT_EXPIRES_IN=21d
 JWT_COOKIE_EXPIRES_IN=90
 
-EMAIL_USERNAME=a124458539192a
-EMAIL_PASSWORD=1e3caf48074eba
-EMAIL_HOST=smtp.mailtrap.io
-EMAIL_PORT=25
+EMAIL_HOST = smtp.mailtrap.io
+EMAIL_USERNAME = 8fdeb856bbcb0b
+EMAIL_PASSWORD = 347c54df924090
+EMAIL_PORT = 25
