--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start:dev": "nodemon server.js",
     "start: prod": "NODE_ENV=production nodemon server.js",
     "sass": "node-sass -w public/scss/ -o public/dist/css --recursive",
-    "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
-    "build:js": "parcel build ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
+    "watch": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
+    "build": "parcel build ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
 
   },
   "repository": {
