--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Building  a car sales website with rust",
   "main": "app.js",
   "scripts": {
-    "start": "node NODE_ENV=production server.js",
+    "start": "node server.js",
     "start:dev": "nodemon server.js",
     "start: prod": "NODE_ENV=production nodemon server.js",
     "sass": "node-sass -w public/scss/ -o public/dist/css --recursive",
