added new config variables

--- a/config.env
+++ b/config.env
@@ -1,7 +1,8 @@
 NODE_ENV = development
 PORT = 3000
 DATABASE_LOCAL = mongodb://localhost:27017/exJapanConnections
-
+DATABASE =mongodb+srv://Ian:xQUo3DGb79lTit7q@cluster0.jcxs2.mongodb.net/fantastic-tutors?retryWrites=true&w=majority
+DATABASE_PASSWORD =xQUo3DGb79lTit7q
 
 JWT_SECRET=welcome-to-Ians-secret-key-for-jsonwebtoken
 JWT_EXPIRES_IN=21d
