--- a/config.env
+++ b/config.env
@@ -1,8 +1,9 @@
 NODE_ENV = development
 PORT = 3000
-DATABASE_LOCAL = mongodb://localhost:27017/exJapanConnections
-DATABASE =mongodb+srv://Ian:xQUo3DGb79lTit7q@cluster0.jcxs2.mongodb.net/fantastic-tutors?retryWrites=true&w=majority
-DATABASE_PASSWORD =xQUo3DGb79lTit7q
+DATABASE_LOCAL_TEST= mongodb://localhost:27017/exJapanConnectionsTest
+DATABASE_LOCAL= mongodb://localhost:27017/exJapanConnections
+
+ONLINE_DATABASE_URL = mongodb+srv://IanGithungo:Treadstone53/@cluster0.ptt7z.mongodb.net/exJapanConnections?retryWrites=true&w=majority
 
 JWT_SECRET=welcome-to-Ians-secret-key-for-jsonwebtoken
 JWT_EXPIRES_IN=21d
