changed database configuration

--- a/config.env
+++ b/config.env
@@ -3,7 +3,11 @@ PORT = 3000
 DATABASE_LOCAL_TEST= mongodb://localhost:27017/exJapanConnectionsTest
 DATABASE_LOCAL= mongodb://localhost:27017/exJapanConnections
 
-ONLINE_DATABASE_URL = mongodb+srv://IanGithungo:Treadstone53/@cluster0.ptt7z.mongodb.net/exJapanConnections?retryWrites=true&w=majority
+ONLINE_DATABASE_URL =mongodb+srv://IanGithungo:2jGhyhGuvRuCeQdh@cluster0.jztku.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+
+ONLINE_DATABASE_URI=mongodb+srv://IanGithungo:9GsFFbDJvUoqUyeM@cluster0.ptt7z.mongodb.net/exJapanConnections?retryWrites=true&w=majority
+
+ONLINE_DATABASE_PASSWORD=9GsFFbDJvUoqUyeM
 
 JWT_SECRET=welcome-to-Ians-secret-key-for-jsonwebtoken
 JWT_EXPIRES_IN=21d
