--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "start:dev": "nodemon server.js",
-    "start: prod": "NODE_ENV=production nodemon server.js",
+    "start:prod": "NODE_ENV=production nodemon server.js",
     "watch": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
     "build": "parcel build ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
   },
@@ -21,7 +21,6 @@
   },
   "homepage": "https://github.com/GithungoIan/exJapanConnection#readme",
   "dependencies": {
-    "@babel/polyfill": "^7.12.1",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -48,6 +47,9 @@
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.8",
+    "@babel/preset-env": "^7.13.9",
+    "@babel/preset-react": "^7.12.13",
     "nodemon": "^2.0.7",
     "parcel-bundler": "^1.12.4",
     "prettier": "^2.2.1"
