--- a/package.json
+++ b/package.json
@@ -53,5 +53,8 @@
     "nodemon": "^2.0.7",
     "parcel-bundler": "^1.12.4",
     "prettier": "^2.2.1"
+  },
+ "engines": {
+    "node": ">=10.0.0"
   }
 }
