--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
     "validator": "^13.5.2",
     "xss-clean": "^0.1.1"
   },
+  "engines": {
+    "node": "12.16.2"
+  },
   "devDependencies": {
     "@babel/core": "^7.13.8",
     "@babel/preset-env": "^7.13.9",
@@ -53,8 +56,5 @@
     "nodemon": "^2.0.7",
     "parcel-bundler": "^1.12.4",
     "prettier": "^2.2.1"
-  },
- "engines": {
-    "node": ">=10.0.0"
   }
 }
