changed config variables

--- a/config.env
+++ b/config.env
@@ -5,9 +5,9 @@ DATABASE_LOCAL= mongodb://localhost:27017/exJapanConnections
 
 ONLINE_DATABASE_URL =mongodb+srv://IanGithungo:2jGhyhGuvRuCeQdh@cluster0.jztku.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 
-ONLINE_DATABASE_URI=mongodb+srv://IanGithungo:9GsFFbDJvUoqUyeM@cluster0.ptt7z.mongodb.net/exJapanConnections?retryWrites=true&w=majority
+ONLINE_DATABASE_URI=mongodb+srv://IanGithungo:I2nJvkCrFDcorird@cluster0.ptt7z.mongodb.net/exJapanConnections?retryWrites=true&w=majority
 
-ONLINE_DATABASE_PASSWORD=9GsFFbDJvUoqUyeM
+ONLINE_DATABASE_PASSWORD=I2nJvkCrFDcorird
 
 JWT_SECRET=welcome-to-Ians-secret-key-for-jsonwebtoken
 JWT_EXPIRES_IN=21d
